fix actives price align

--- a/scss/actives.scss
+++ b/scss/actives.scss
@@ -306,7 +306,6 @@
 
       &.activesModal--startPrice {
         position: relative;
-        display: inline-flex;
 
         &::after {
           content: '';
